@@ -32,7 +32,7 @@ public class StreamingLogsToolWindowManager {
     @AzureOperation(name = "boundary/common.open_log_streaming_console.resource", params = {"resourceName"})
     public void showStreamingLogConsole(Project project, String resourceId, String resourceName, ConsoleView consoleView) {
         final ToolWindow toolWindow = getToolWindow(project);
-        final ContentFactory contentFactory = ContentFactory.getInstance();
+        final ContentFactory contentFactory = ContentFactory.SERVICE.getInstance();
         final String consoleName = getConsoleViewName(resourceId, resourceName);
         Content content = toolWindow.getContentManager().findContent(consoleName);
         if (content == null) {
@@ -56,7 +56,7 @@ public class StreamingLogsToolWindowManager {
 
     public List<StreamingLogsConsoleView> getToolWindowContents(Project project, String resourceIdPrefix) {
         final ToolWindow toolWindow = getToolWindow(project);
-        final List<String> consoleNames = resourceIdToNameMap.keySet().stream().filter(k -> k.contains(resourceIdPrefix)).map(resourceIdToNameMap::get).toList();
+        final List<String> consoleNames = resourceIdToNameMap.keySet().stream().filter(k -> k.contains(resourceIdPrefix)).map(resourceIdToNameMap::get).collect(Collectors.toList());
         return consoleNames.stream().filter(Objects::nonNull)
                 .map(n -> toolWindow.getContentManager().findContent(n).getDisposer())
                 .filter(d -> d instanceof StreamingLogsConsoleView)
